objects/Guided_Selling_Flow_Step__c.object
<CustomObject>
    <description>Used to setup a step in a Guided Selling Flow.</description>
    <fields>
        <fullName>Condition_Logic__c</fullName>
        <description>What it Does? The filter condition for the flow step.
Downstream Impact? N/A
Which department is owner? Sales Ops/IT</description>
        <label>Condition Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guided_Selling_Flow__c</fullName>
        <description>What it Does? The Guided Selling Flow with which this flow step is associated
Downstream Impact? N/A
Which department is owner? Sales Ops/IT</description>
        <label>Guided Selling Flow</label>
        <referenceTo>Guided_Selling_Flow__c</referenceTo>
        <relationshipLabel>Guided Selling Flow Steps</relationshipLabel>
        <relationshipName>Guided_Selling_Flow_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? To indicate whether the Flow Step is active or not
Downstream Impact? N/A
Which department is owner? Sales Ops/IT</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>What it Does? Order in which this Flow Step will be displayed to the user in the wizard in Quote Tools.
Downstream Impact? N/A
Which department is owner? Sales Ops/IT</description>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>What it Does? Step Name displayed in the Flow to the User
Downstream Impact? N/A
Which department is owner? Sales Ops/IT</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Guided Selling Flow Step</label>
    <nameField>
        <label>Guided Selling Flow Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guided Selling Flow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>